# gdemo

./: CMakeLists.txt  README.md  run.sh
shaders/: defShader.vert  shader.frag  shader.vert
src/: Camera.cpp  FpsCounter.cpp  FpsCounter.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MoveController.cpp  MoveController.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderManager.cpp  ShaderManager.h  constants.h  main.cpp  sceneBuilding.h
